version 0.77.05
	glade code cleanup
	Adding libxml2-2.dll to windows zip
	automatically select new picture in buffer window

version 0.77.04 ( 2011-11-01 )
	--select_af_point
	Store extended iso range for camera models
	commandline: Delay only after bracketing groups if auto bracketing is set.
	--jpeg_image_tone ( buggy )
	Handling camera specific jpeg image tone table.
	Command line: info about frame count

version 0.77.02 ( 2011-09-03 )
	html version of man page
	Eliminated hardwired buffer limit (now it's limited to 16 because
	of the length of bufmask array)
	Reading exposure submode field (K-x, K-7, K-5, K-r, K-m/K2000)
	Image format handling bugfix
	Better formatting of human readable status info
	--color_space
	--af_mode
	--ae_metering
	--flash_mode
	--drive_mode
	sg.h include code cleanup (taken from ALT Linux patch)
	Better no camera error message

version 0.77.00 ( 2011-07-18 )
	--warnings switch
	--quality bugfix
	Pentax K-m/K2000 support (thx to Tomasz Kos for sharing the info)
	Reading/writing AE metering mode field (K-x, K-7, K-5, K-r)
	Updating lens info database ( exiftool 8.60 )
	Reading battery fields (K-x, K-7, K-5, K-r)
	Reading max shutter speed field  (K-x, K-7, K-5, K-r)
	--flash_exposure_compensation switch
	--green switch
	--dust_removal

version 0.76.00 ( 2011-07-06 )
	Support for K-r added by Vincenc Podobnik <vincenc.podobnik@gmail.com>
	Pentax K-5 support (thx to Tomasz Kos for sharing the info)
	Reading lens id fields for K-x, K-7
	Lens info (lens database source: exiftool)
	Created man pages
	gui --debug switch bugfix

version 0.75.02 ( 2011-06-30 )
	Better bracket ev handling for K-x
	Buffer handling bugfix for limited support cameras (thx Charles	Orbello for reporting and testing)
	Shutter speed bugfix
	-r switch bugfix

version 0.75.00 ( 2011-06-26 )
	buffer window bugfixes
	Removing hardwired version number from pktriggercord.glade
	Adding 1/2 EV shutter speed table to GUI
	Handling camera specific ISO tables (only base iso)