@@ -2,6 +2,7 @@ version 0.77.05
 	glade code cleanup
 	Adding libxml2-2.dll to windows zip
 	automatically select new picture in buffer window
+	--white_balance_mode
 
 version 0.77.04 ( 2011-11-01 )
 	--select_af_point
